--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "hadron"]
+	path = hadron
+	url = https://github.com/hiskp-lqcd/hadron
+	shallow = true
+	registered = true
+[submodule "qsimulatR"]
+	path = qsimulatR
+	url = https://github.com/hiskp-lqcd/qsimulatr
+	shallow = true
+	registered = true
